kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tornado-mock-http-origin
    version: latest
  name: tornado-mock-http-origin
  namespace: mock-http-origin
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tornado-mock-http-origin
  template:
    metadata:
      labels:
        app: tornado-mock-http-origin
    spec:
      containers:
        - name: tornado-mock-http-origin
          image: ghcr.io/kyoobit/tornado-mock-http-origin:latest
          args:
            - --verbose
          ports:
            - containerPort: 8888
              name: "mock-http-origin"
