kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tornado-mock-http-origin
  namespace: mock-http-origin
spec:
  selector:
    app: tornado-mock-http-origin
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
