kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tornado-mock-http-origin
  namespace: mock-origin
spec:
  rules:
    - host: tornado-mock-http-origin.microk8s.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tornado-mock-http-origin
                port:
                  number: 8888
